@@ -1,8 +1,8 @@
 package org.personsal.mybatis.common.page;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.Data;
-import org.springframework.data.domain.Page;
 
 /** created by: maharjananil created on: 11/15/2024 */
 @Data
@@ -12,14 +12,12 @@ public class CustomPage<T> {
   private int pageSize;
   private int currentPage;
 
-  public CustomPage<T> toCustomPage(Page<T> data, int total, int pageSize, int currentPage) {
+  public CustomPage<T> toCustomPage(List<T> data, int total, int pageSize, int currentPage) {
     CustomPage<T> customPage = new CustomPage<>();
-    if (data.hasContent()) {
-      customPage.setData(List.copyOf(data.getContent()));
-      customPage.setPageSize(data.getPageable().getPageSize());
-      customPage.setCurrentPage(data.getPageable().getPageNumber());
-      customPage.setTotal(data.getTotalPages());
-    }
+    customPage.setData(data.isEmpty() ? Collections.emptyList() : List.copyOf(data));
+    customPage.setPageSize(pageSize);
+    customPage.setCurrentPage(currentPage);
+    customPage.setTotal(total);
     return customPage;
   }
 }
